--- a/ApestractArtGallerySplash.html
+++ b/ApestractArtGallerySplash.html
@@ -64,6 +64,17 @@
             z-index: 1000;
         }
 
+	.close-button {
+ 	    background-color: transparent;
+	    color: #fff;
+	    border: none;
+	    font-size: 20px;
+	    position: absolute;
+	    top: 10px;
+	    right: 10px;
+	    cursor: pointer;
+	}
+
         .gallery {
             display: flex;
             flex-wrap: wrap;
@@ -128,7 +139,7 @@
             font-family: 'CustomFont', sans-serif;
         }
 
-        .so-spooky-container {
+        .so-bananas-container {
             display: none;
             margin: 20px auto;
             max-width: 300px;
@@ -136,13 +147,13 @@
             text-align: center;
         }
 
-        .so-spooky-container img {
+        .so-bananas-container img {
             width: 100%;
             height: auto;
             border-radius: 8px;
         }
 
-        .so-spooky-container p {
+        .so-bananas-container p {
             color: #fff;
             margin-top: 5px;
             font-family: 'CustomFont', sans-serif;
@@ -171,6 +182,7 @@
     </div>
 
     <div class="sidebar" id="filterSidebar">
+	<button class="close-button" onclick="closeSidebar()">x</button>
         <h2>Filter Traits</h2>
         <div id="filterOptions">
             <!-- Dropdown menus will be generated here -->
@@ -990,8 +1002,13 @@
         function toggleSidebar() {
             const sidebar = document.getElementById("filterSidebar");
             sidebar.style.display = sidebar.style.display === "block" ? "none" : "block";
-            populateTraitOptions();
+            populateTraitOptions(); // Only populate if the sidebar is opening
         }
+
+	function closeSidebar() {
+	    const sidebar = document.getElementById("filterSidebar");
+	    sidebar.style.display = "none";  // Close the sidebar
+}
 
         function displayGallery(data, page) {
             const galleryContainer = document.getElementById("gallery-container");
@@ -1058,7 +1075,7 @@
     // Use regex to check if search term is a number format within the name (e.g., "#1")
     const exactMatch = inscriptionIds.filter(item => 
         item.inscriptionId.toLowerCase() === searchTerm || 
-        item.name.toLowerCase() === `spook society #${searchTerm}`
+        item.name.toLowerCase() === `ape #${searchTerm}`
     );
     
     filteredData = exactMatch;
