--- a/ApestraArtGalleryMetaverse.html
+++ b/ApestraArtGalleryMetaverse.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Spooky Society</title>
+    <title>Ape-stract Art Gallery</title>
     <style>
                 @font-face {
             font-family: 'CustomFont';
@@ -150,10 +150,11 @@
 
 <script>
     const inscriptionIds = [
- "9ee391a157bb8883f4f085cb1edf807d5e6f9958b481d3286f0127fa2df96838i0THESE-NEED-REPLACED",
-"5660557e52431d4f3b32e3a1ec0a119b3db5420e493e58ea660479b42028e24ei0THESE-NEED-REPLACED",
-"43f6e35082356cbd970fb8ad77a76e2c9a63dc6d023036ba7661dac8cd472d5ei0THESE-NEED-REPLACED",
-"d3eafee96ecc0c3fd64ce8e367ac59a8e026e3f68aa257716ee2cbd2d7ead0d7i0THESE-NEED-REPLACED-WITH-APESTRACTS-IDS"
+
+"5c4e39b917b700ce2c9e4840130c825a8365e8b6ff516e82f7680f194f39ba78i0",
+"6b1ad2788d6933118dce167f5b59eaefea0b96cf26a893ee647c26849523e7d3i0",
+"c724722bdfbc159c9162dae0acc1e8eabb26cc08ea7b831d2fb9be02094a80a7i0",
+"2f007b97ae7b2d0543c28a421ec5f1072fba80eb7d38857eb39ea70c6998497bi0"
 
     ];  
 
