--- a/ApestractArtGallerySplash.html
+++ b/ApestractArtGallerySplash.html
@@ -188,7 +188,7 @@
             <!-- Dropdown menus will be generated here -->
         </div>
     </div>
-    <p1>The Apes of Ape-stract Art hold 100 Masterpieces, waiting to be claimed. Each one carries eerie secrets and exclusive rewards. Ready to embrace the unknown?</p1>
+    <p1>The Apes of Ape-stract Art HODL's 100 Masterpieces in Total. Each one carries eerie Secrets & Exclusive Rewards Guarded with Encoded Đigital image Steganography, LSB & Matrix embedding that hides messages into images that appear innocuous to an unintended observer. Ready to embrace the secrets of the unknown? Can You Crack The Codes?</p1>
 
     <div class="gallery" id="gallery-container"></div>
     <div class="pagination" id="pagination-container"></div>
