--- a/ApestractArtGallerySplash.html
+++ b/ApestractArtGallerySplash.html
@@ -15,7 +15,8 @@
         body {
             font-family: 'CustomFont', sans-serif;
             color: #fff;
-            background-color: #000;
+            background-image: url('https://cdn.doggy.market/content/8031d707a31718dfdeab65d56218c918df524b427540a75462da09b3a3dc4837i0');
+    	    background-size: cover; /* Ensures the image covers the entire box */
             margin: 0;
             padding: 0;
             text-align: center;
@@ -23,12 +24,22 @@
 
         h1 {
             margin: 20px 0;
-            color: #fff;
+            background: linear-gradient(90deg, 
+	        rgba(255, 0, 0, 0.8),   /* Red with 80% opacity */
+	        rgba(255, 127, 0, 0.9), /* Orange with 90% opacity */
+	        rgba(255, 255, 0, 0.9), /* Yellow with 90% opacity */
+	        rgba(0, 255, 0, 0.9),   /* Green with 90% opacity */
+	        rgba(0, 0, 255, 0.9),   /* Blue with 90% opacity */
+	        rgba(75, 0, 130, 0.9),  /* Indigo with 90% opacity */
+	        rgba(148, 0, 211, 1.9)  /* Violet with 190% opacity */
+    );
+    -webkit-background-clip: text;   /* Clip the background to the text */
+    -webkit-text-fill-color: transparent; /* Make the text color transparent to show the gradient */
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
         }
 
         .button-container button {
-            background-color: #a39c84;
+            background-color: #2aff00b8;
             color: rgb(240, 230, 230);
             padding: 10px 20px;
             border: none;
@@ -42,7 +53,7 @@
         }
 
         .button-container button:hover {
-            background-color: #6e6141;
+            background-color: #0040ffba;
         }
 
         .input-container, .pagination, .sidebar {
@@ -83,14 +94,20 @@
             padding: 10px;
         }
 
-        .box {
-            width: 180px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border: 1px solid #ccc;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-            padding: 10px;
-            text-align: center;
-        }
+	.box {
+	    width: 180px;
+	    background: linear-gradient(90deg, 
+	        rgba(255, 0, 0, 0.5),   /* Red with 50% opacity */
+        rgba(255, 127, 0, 0.5), /* Orange with 50% opacity */
+        rgba(255, 255, 0, 0.5), /* Yellow with 50% opacity */
+        rgba(0, 255, 0, 0.5),   /* Green with 50% opacity */
+        rgba(0, 0, 255, 0.5)    /* Blue with 50% opacity */
+    );
+	    border: 1px solid #ccc;
+	    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+	    padding: 10px;
+	    text-align: center;
+}
 
         .box img {
             width: 100%;
@@ -118,7 +135,7 @@
         }
 
         .pagination button, .submit-button, .filter-button {
-            background-color: #a39c84;
+            background-color: #ff0000bf;
             color: rgb(240, 230, 230);
             padding: 10px;
             border: none;
@@ -130,7 +147,7 @@
         }
 
         .pagination button:hover, .submit-button:hover, .filter-button:hover {
-            background-color: #6e6141;
+            background-color: #f1ff21a8;
         }
 
         .dropdown {
@@ -188,7 +205,19 @@
             <!-- Dropdown menus will be generated here -->
         </div>
     </div>
-    <p1>The Apes of Ape-stract Art HODL's 100 Masterpieces in Total. Each one carries eerie Secrets & Exclusive Rewards Guarded with Encoded Đigital image Steganography, LSB & Matrix embedding that hides messages into images that appear innocuous to an unintended observer. Ready to embrace the secrets of the unknown? Can You Crack The Codes?</p1>
+
+    <p style="background: linear-gradient(90deg, 
+	rgba(255, 0, 0, 0.9),   /* Red with 90% opacity */
+	rgba(255, 127, 0, 0.9), /* Orange with 90% opacity */
+	rgba(255, 255, 0, 0.9), /* Yellow with 90% opacity */
+	rgba(0, 255, 0, 0.9)    /* Green with 90% opacity */
+    ); 
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent; 
+    text-align: center; 
+    margin: 20px 0;">
+    	The Apes of Ape-stract Art HODL's 100 Masterpieces in Total. Each one carries eerie Secrets & Exclusive Rewards Guarded with Encoded Digital image Steganography, LSB & Matrix embedding that hides messages into images that appear innocuous to an unintended observer. Ready to embrace the secrets of the unknown? Can You Crack The Codes?
+    </p>
 
     <div class="gallery" id="gallery-container"></div>
     <div class="pagination" id="pagination-container"></div>
