--- a/ApestraArtGalleryMetaverse.html
+++ b/ApestraArtGalleryMetaverse.html
@@ -7,12 +7,18 @@
     <style>
                 @font-face {
             font-family: 'CustomFont';
-            src: url('https://cdn.doggy.market/content/b4e86ccacade8a0abf29debd0a08f6547b1a88683fa51a3409712b8efef44be9i0') format('truetype');
+            src: url('https://wonky-ord.dogeord.io/content/b3af17d23c17f604ec00251e4333cd40fa6230ed7386d685d63d3acce9516f33i0') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
-        body { margin: 0; overflow: hidden; }
+        body { 
+            margin: 0; 
+            overflow: hidden; 
+            cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
+        }
+
         canvas { display: block; }
+
         #modal {
             position: absolute;
             top: 0;
@@ -29,7 +35,7 @@
         }
         #modalContent {
             text-align: center;
-            background-image: url('https://cdn.doggy.market/content/ba71544f3a6431f4a83375bdcecf4f714a25dafb82920ba79bab638f84968230i0');
+            background-image: url('https://wonky-ord.dogeord.io/content/ba71544f3a6431f4a83375bdcecf4f714a25dafb82920ba79bab638f84968230i0');
     	    background-size: cover; /* Ensures the image covers the entire box */
             padding: 20px;
             border-radius: 10px;
@@ -43,7 +49,7 @@
             color: rgb(255, 255, 0);
             border: none;
             border-radius: 5px;
-            cursor: pointer;
+            cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
             font-family: CustomFont, sans-serif;
         }
         #topButtons {
@@ -62,7 +68,7 @@
             color: #2700ff;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
+            cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
             font-family: CustomFont, sans-serif;
         }
         #controls {
@@ -85,7 +91,7 @@
             text-align: center;
             line-height: 60px;
             user-select: none;
-            cursor: pointer;
+            cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
         }
         #joystick {
             position: absolute;
