--- a/ApestractArtGallerySplash.html
+++ b/ApestractArtGallerySplash.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'CustomFont';
-            src: url('https://cdn.doggy.market/content/b4e86ccacade8a0abf29debd0a08f6547b1a88683fa51a3409712b8efef44be9i0') format('truetype');
+            src: url('https://wonky-ord.dogeord.io/content/b3af17d23c17f604ec00251e4333cd40fa6230ed7386d685d63d3acce9516f33i0') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
@@ -15,8 +15,9 @@
         body {
             font-family: 'CustomFont', sans-serif;
             color: #fff;
-            background-image: url('https://cdn.doggy.market/content/8031d707a31718dfdeab65d56218c918df524b427540a75462da09b3a3dc4837i0');
+            background-image: url('https://wonky-ord.dogeord.io/content/8031d707a31718dfdeab65d56218c918df524b427540a75462da09b3a3dc4837i0');
     	    background-size: cover; /* Ensures the image covers the entire box */
+	    cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
             margin: 0;
             padding: 0;
             text-align: center;
@@ -44,7 +45,7 @@
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
+            cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
             font-size: 16px;
             margin: 10px;
             font-family: 'CustomFont', sans-serif;
@@ -83,7 +84,7 @@
 	    position: absolute;
 	    top: 10px;
 	    right: 10px;
-	    cursor: pointer;
+	    cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
 	}
 
         .gallery {
@@ -140,7 +141,7 @@
             padding: 10px;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
+            cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
             font-size: 14px;
             font-family: 'CustomFont', sans-serif;
             margin: 5px;
@@ -160,7 +161,7 @@
             display: none;
             margin: 20px auto;
             max-width: 300px;
-            cursor: pointer;
+            cursor: url('https://wonky-ord.dogeord.io/content/0798bf75ab07fcdf153c13fc07ef381916a010ebe5d5729564aef3dd0aac4a54i0'), auto; /* Custom cursor */
             text-align: center;
         }
 
